Fix #12 set max width for overlay content to improve readability.

--- a/src/components/Overlay.css
+++ b/src/components/Overlay.css
@@ -20,6 +20,8 @@
   min-height: 100%;
   padding: 10px 30px;
   position: relative;
+  max-width: 55rem;
+  margin: auto;
 }
 
 .overlay__inner__transp-layer {
